# pyivm

./: .gitignore  README.md  pyproject.toml
pyivm/ivm/: calinski_harabasz.py  davies_bouldin.py  dunn.py  i_index.py  silhouette.py  utils.py  xie_beni.py
tests/: conftest.py  test_config.py  test_metrics.py
